fix screenshot alignment

--- a/css/main.css
+++ b/css/main.css
@@ -325,11 +325,10 @@ body, h1, p, a, ul, li, div {
 .project-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .screenshot {
-  margin: 0px 50px 30px 50px;
+  margin-bottom: 30px;
   cursor: pointer;
   height: 40vh;
 }
@@ -344,11 +343,6 @@ body, h1, p, a, ul, li, div {
 
 .screenshot:hover .screenshot-image {
   height: 110%;
-}
-
-.project-description {
-  margin: 0 50px;
-  font-size: 12px;
 }
 
 /*CONTACT*/
